0.13.x/_sources/api/skimage.draw.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`draw`
===================
.. automodule:: skimage.draw

.. currentmodule:: skimage.draw
.. autosummary::

   skimage.draw.bezier_curve
   skimage.draw.circle
   skimage.draw.circle_perimeter
   skimage.draw.circle_perimeter_aa
   skimage.draw.ellipse
   skimage.draw.ellipse_perimeter
   skimage.draw.ellipsoid
   skimage.draw.ellipsoid_stats
   skimage.draw.line
   skimage.draw.line_aa
   skimage.draw.polygon
   skimage.draw.polygon_perimeter
   skimage.draw.set_color


    skimage.draw.draw
    skimage.draw.draw3d

bezier_curve
------------

.. autofunction:: skimage.draw.bezier_curve

circle
------

.. autofunction:: skimage.draw.circle

circle_perimeter
----------------

.. autofunction:: skimage.draw.circle_perimeter

circle_perimeter_aa
-------------------

.. autofunction:: skimage.draw.circle_perimeter_aa

ellipse
-------

.. autofunction:: skimage.draw.ellipse

ellipse_perimeter
-----------------

.. autofunction:: skimage.draw.ellipse_perimeter

ellipsoid
---------

.. autofunction:: skimage.draw.ellipsoid

ellipsoid_stats
---------------

.. autofunction:: skimage.draw.ellipsoid_stats

line
----

.. autofunction:: skimage.draw.line

line_aa
-------

.. autofunction:: skimage.draw.line_aa

polygon
-------

.. autofunction:: skimage.draw.polygon

polygon_perimeter
-----------------

.. autofunction:: skimage.draw.polygon_perimeter

set_color
---------

.. autofunction:: skimage.draw.set_color

